// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SpellForm /> fields <CastingTimeField /> should match the snapshot 1`] = `
<CastingTimeField
  form={
    Object {
      "data": Object {
        "castingTime": "1 reaction, which you take when you speak your own name or hear it spoken",
        "description": "Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap.",
        "duration": "Instantaneous",
        "id": "e17bca01-24d3-48d3-a308-099dd6dca373",
        "level": 0,
        "materialComponent": "",
        "name": "Thunderclap",
        "range": "Self",
        "ritual": false,
        "school": "illusion",
        "shortDescription": "Create an ominous thunderclap when your name is spoken",
        "somaticComponent": false,
        "verbalComponent": false,
      },
      "namespace": "spell",
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
    }
  }
>
  <FormField
    colWidth={null}
    inputId={null}
    label={null}
    namespace="spell"
    prop="castingTime"
  >
    <FormGroup
      className="form-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field"
      >
        <label
          htmlFor="spell-casting-time-input"
        >
          Casting Time
        </label>
        <CastingTimeInput
          form={
            Object {
              "data": Object {
                "castingTime": "1 reaction, which you take when you speak your own name or hear it spoken",
                "description": "Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap.",
                "duration": "Instantaneous",
                "id": "e17bca01-24d3-48d3-a308-099dd6dca373",
                "level": 0,
                "materialComponent": "",
                "name": "Thunderclap",
                "range": "Self",
                "ritual": false,
                "school": "illusion",
                "shortDescription": "Create an ominous thunderclap when your name is spoken",
                "somaticComponent": false,
                "verbalComponent": false,
              },
              "namespace": "spell",
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
            }
          }
        >
          <FormInput
            id="spell-casting-time-input"
            onChange={[Function]}
            placeholder=""
            type="text"
            value="1 reaction, which you take when you speak your own name or hear it spoken"
          >
            <input
              className="form-control"
              id="spell-casting-time-input"
              onChange={[Function]}
              placeholder=""
              type="text"
              value="1 reaction, which you take when you speak your own name or hear it spoken"
            />
          </FormInput>
        </CastingTimeInput>
      </div>
    </FormGroup>
  </FormField>
</CastingTimeField>
`;

exports[`<SpellForm /> fields <DescriptionField /> should match the snapshot 1`] = `
<DescriptionField
  form={
    Object {
      "data": Object {
        "castingTime": "1 reaction, which you take when you speak your own name or hear it spoken",
        "description": "Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap.",
        "duration": "Instantaneous",
        "id": "e17bca01-24d3-48d3-a308-099dd6dca373",
        "level": 0,
        "materialComponent": "",
        "name": "Thunderclap",
        "range": "Self",
        "ritual": false,
        "school": "illusion",
        "shortDescription": "Create an ominous thunderclap when your name is spoken",
        "somaticComponent": false,
        "verbalComponent": false,
      },
      "namespace": "spell",
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
    }
  }
>
  <FormField
    colWidth={null}
    inputId={null}
    label={null}
    namespace="spell"
    prop="description"
  >
    <FormGroup
      className="form-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field"
      >
        <label
          htmlFor="spell-description-input"
        >
          Description
        </label>
        <DescriptionInput
          form={
            Object {
              "data": Object {
                "castingTime": "1 reaction, which you take when you speak your own name or hear it spoken",
                "description": "Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap.",
                "duration": "Instantaneous",
                "id": "e17bca01-24d3-48d3-a308-099dd6dca373",
                "level": 0,
                "materialComponent": "",
                "name": "Thunderclap",
                "range": "Self",
                "ritual": false,
                "school": "illusion",
                "shortDescription": "Create an ominous thunderclap when your name is spoken",
                "somaticComponent": false,
                "verbalComponent": false,
              },
              "namespace": "spell",
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
            }
          }
        >
          <FormTextAreaInput
            id="spell-description-input"
            onChange={[Function]}
            rows={3}
            value="Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap."
          >
            <textarea
              className="form-control"
              id="spell-description-input"
              onChange={[Function]}
              rows={3}
              value="Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap."
            />
          </FormTextAreaInput>
        </DescriptionInput>
      </div>
    </FormGroup>
  </FormField>
</DescriptionField>
`;

exports[`<SpellForm /> fields <DurationField /> should match the snapshot 1`] = `
<DurationField
  form={
    Object {
      "data": Object {
        "castingTime": "1 reaction, which you take when you speak your own name or hear it spoken",
        "description": "Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap.",
        "duration": "Instantaneous",
        "id": "e17bca01-24d3-48d3-a308-099dd6dca373",
        "level": 0,
        "materialComponent": "",
        "name": "Thunderclap",
        "range": "Self",
        "ritual": false,
        "school": "illusion",
        "shortDescription": "Create an ominous thunderclap when your name is spoken",
        "somaticComponent": false,
        "verbalComponent": false,
      },
      "namespace": "spell",
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
    }
  }
>
  <FormField
    colWidth={null}
    inputId={null}
    label={null}
    namespace="spell"
    prop="duration"
  >
    <FormGroup
      className="form-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field"
      >
        <label
          htmlFor="spell-duration-input"
        >
          Duration
        </label>
        <DurationInput
          form={
            Object {
              "data": Object {
                "castingTime": "1 reaction, which you take when you speak your own name or hear it spoken",
                "description": "Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap.",
                "duration": "Instantaneous",
                "id": "e17bca01-24d3-48d3-a308-099dd6dca373",
                "level": 0,
                "materialComponent": "",
                "name": "Thunderclap",
                "range": "Self",
                "ritual": false,
                "school": "illusion",
                "shortDescription": "Create an ominous thunderclap when your name is spoken",
                "somaticComponent": false,
                "verbalComponent": false,
              },
              "namespace": "spell",
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
            }
          }
        >
          <FormInput
            id="spell-duration-input"
            onChange={[Function]}
            placeholder=""
            type="text"
            value="Instantaneous"
          >
            <input
              className="form-control"
              id="spell-duration-input"
              onChange={[Function]}
              placeholder=""
              type="text"
              value="Instantaneous"
            />
          </FormInput>
        </DurationInput>
      </div>
    </FormGroup>
  </FormField>
</DurationField>
`;

exports[`<SpellForm /> fields <LevelField /> should match the snapshot 1`] = `
<LevelField
  form={
    Object {
      "data": Object {
        "castingTime": "1 reaction, which you take when you speak your own name or hear it spoken",
        "description": "Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap.",
        "duration": "Instantaneous",
        "id": "e17bca01-24d3-48d3-a308-099dd6dca373",
        "level": 0,
        "materialComponent": "",
        "name": "Thunderclap",
        "range": "Self",
        "ritual": false,
        "school": "illusion",
        "shortDescription": "Create an ominous thunderclap when your name is spoken",
        "somaticComponent": false,
        "verbalComponent": false,
      },
      "namespace": "spell",
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
    }
  }
>
  <FormField
    colWidth={null}
    inputId={null}
    label={null}
    namespace="spell"
    prop="level"
  >
    <FormGroup
      className="form-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field"
      >
        <label
          htmlFor="spell-level-input"
        >
          Level
        </label>
        <LevelInput
          form={
            Object {
              "data": Object {
                "castingTime": "1 reaction, which you take when you speak your own name or hear it spoken",
                "description": "Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap.",
                "duration": "Instantaneous",
                "id": "e17bca01-24d3-48d3-a308-099dd6dca373",
                "level": 0,
                "materialComponent": "",
                "name": "Thunderclap",
                "range": "Self",
                "ritual": false,
                "school": "illusion",
                "shortDescription": "Create an ominous thunderclap when your name is spoken",
                "somaticComponent": false,
                "verbalComponent": false,
              },
              "namespace": "spell",
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
            }
          }
        >
          <FormNumericInput
            id="spell-level-input"
            onChange={[Function]}
            placeholder=""
            type="number"
            value={0}
          >
            <input
              className="form-control"
              id="spell-level-input"
              onChange={[Function]}
              placeholder=""
              type="number"
              value={0}
            />
          </FormNumericInput>
        </LevelInput>
      </div>
    </FormGroup>
  </FormField>
</LevelField>
`;

exports[`<SpellForm /> fields <NameField /> should match the snapshot 1`] = `
<NameField
  form={
    Object {
      "data": Object {
        "castingTime": "1 reaction, which you take when you speak your own name or hear it spoken",
        "description": "Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap.",
        "duration": "Instantaneous",
        "id": "e17bca01-24d3-48d3-a308-099dd6dca373",
        "level": 0,
        "materialComponent": "",
        "name": "Thunderclap",
        "range": "Self",
        "ritual": false,
        "school": "illusion",
        "shortDescription": "Create an ominous thunderclap when your name is spoken",
        "somaticComponent": false,
        "verbalComponent": false,
      },
      "namespace": "spell",
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
    }
  }
>
  <FormField
    colWidth={null}
    inputId={null}
    label={null}
    namespace="spell"
    prop="name"
  >
    <FormGroup
      className="form-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field"
      >
        <label
          htmlFor="spell-name-input"
        >
          Name
        </label>
        <NameInput
          form={
            Object {
              "data": Object {
                "castingTime": "1 reaction, which you take when you speak your own name or hear it spoken",
                "description": "Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap.",
                "duration": "Instantaneous",
                "id": "e17bca01-24d3-48d3-a308-099dd6dca373",
                "level": 0,
                "materialComponent": "",
                "name": "Thunderclap",
                "range": "Self",
                "ritual": false,
                "school": "illusion",
                "shortDescription": "Create an ominous thunderclap when your name is spoken",
                "somaticComponent": false,
                "verbalComponent": false,
              },
              "namespace": "spell",
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
            }
          }
        >
          <FormInput
            id="spell-name-input"
            onChange={[Function]}
            placeholder=""
            type="text"
            value="Thunderclap"
          >
            <input
              className="form-control"
              id="spell-name-input"
              onChange={[Function]}
              placeholder=""
              type="text"
              value="Thunderclap"
            />
          </FormInput>
        </NameInput>
      </div>
    </FormGroup>
  </FormField>
</NameField>
`;

exports[`<SpellForm /> fields <RangeField /> should match the snapshot 1`] = `
<RangeField
  form={
    Object {
      "data": Object {
        "castingTime": "1 reaction, which you take when you speak your own name or hear it spoken",
        "description": "Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap.",
        "duration": "Instantaneous",
        "id": "e17bca01-24d3-48d3-a308-099dd6dca373",
        "level": 0,
        "materialComponent": "",
        "name": "Thunderclap",
        "range": "Self",
        "ritual": false,
        "school": "illusion",
        "shortDescription": "Create an ominous thunderclap when your name is spoken",
        "somaticComponent": false,
        "verbalComponent": false,
      },
      "namespace": "spell",
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
    }
  }
>
  <FormField
    colWidth={null}
    inputId={null}
    label={null}
    namespace="spell"
    prop="range"
  >
    <FormGroup
      className="form-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field"
      >
        <label
          htmlFor="spell-range-input"
        >
          Range
        </label>
        <RangeInput
          form={
            Object {
              "data": Object {
                "castingTime": "1 reaction, which you take when you speak your own name or hear it spoken",
                "description": "Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap.",
                "duration": "Instantaneous",
                "id": "e17bca01-24d3-48d3-a308-099dd6dca373",
                "level": 0,
                "materialComponent": "",
                "name": "Thunderclap",
                "range": "Self",
                "ritual": false,
                "school": "illusion",
                "shortDescription": "Create an ominous thunderclap when your name is spoken",
                "somaticComponent": false,
                "verbalComponent": false,
              },
              "namespace": "spell",
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
            }
          }
        >
          <FormInput
            id="spell-range-input"
            onChange={[Function]}
            placeholder=""
            type="text"
            value="Self"
          >
            <input
              className="form-control"
              id="spell-range-input"
              onChange={[Function]}
              placeholder=""
              type="text"
              value="Self"
            />
          </FormInput>
        </RangeInput>
      </div>
    </FormGroup>
  </FormField>
</RangeField>
`;

exports[`<SpellForm /> fields <RitualField /> should match the snapshot 1`] = `
<RitualField
  form={
    Object {
      "data": Object {
        "castingTime": "1 reaction, which you take when you speak your own name or hear it spoken",
        "description": "Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap.",
        "duration": "Instantaneous",
        "id": "e17bca01-24d3-48d3-a308-099dd6dca373",
        "level": 0,
        "materialComponent": "",
        "name": "Thunderclap",
        "range": "Self",
        "ritual": false,
        "school": "illusion",
        "shortDescription": "Create an ominous thunderclap when your name is spoken",
        "somaticComponent": false,
        "verbalComponent": false,
      },
      "namespace": "spell",
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
    }
  }
>
  <FormField
    colWidth={null}
    inputId={null}
    label={null}
    namespace="spell"
    prop="ritual"
  >
    <FormGroup
      className="form-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field"
      >
        <label
          htmlFor="spell-ritual-input"
        >
          Ritual
        </label>
        <RitualInput
          form={
            Object {
              "data": Object {
                "castingTime": "1 reaction, which you take when you speak your own name or hear it spoken",
                "description": "Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap.",
                "duration": "Instantaneous",
                "id": "e17bca01-24d3-48d3-a308-099dd6dca373",
                "level": 0,
                "materialComponent": "",
                "name": "Thunderclap",
                "range": "Self",
                "ritual": false,
                "school": "illusion",
                "shortDescription": "Create an ominous thunderclap when your name is spoken",
                "somaticComponent": false,
                "verbalComponent": false,
              },
              "namespace": "spell",
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
            }
          }
        >
          <FormCheckboxInput
            id="spell-ritual-input"
            label={null}
            onChange={[Function]}
            value={false}
          >
            <div
              className="custom-control custom-checkbox"
            >
              <input
                checked={false}
                className="custom-control-input"
                id="spell-ritual-input"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="custom-control-label"
                htmlFor="spell-ritual-input"
              />
            </div>
          </FormCheckboxInput>
        </RitualInput>
      </div>
    </FormGroup>
  </FormField>
</RitualField>
`;

exports[`<SpellForm /> fields <SchoolField /> should match the snapshot 1`] = `
<SchoolField
  form={
    Object {
      "data": Object {
        "castingTime": "1 reaction, which you take when you speak your own name or hear it spoken",
        "description": "Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap.",
        "duration": "Instantaneous",
        "id": "e17bca01-24d3-48d3-a308-099dd6dca373",
        "level": 0,
        "materialComponent": "",
        "name": "Thunderclap",
        "range": "Self",
        "ritual": false,
        "school": "illusion",
        "shortDescription": "Create an ominous thunderclap when your name is spoken",
        "somaticComponent": false,
        "verbalComponent": false,
      },
      "namespace": "spell",
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
    }
  }
  options={
    Array [
      Object {
        "label": "Abjuration",
        "value": "abjuration",
      },
      Object {
        "label": "Conjuration",
        "value": "conjuration",
      },
      Object {
        "label": "Divination",
        "value": "divination",
      },
      Object {
        "label": "Enchantment",
        "value": "enchantment",
      },
      Object {
        "label": "Evocation",
        "value": "evocation",
      },
      Object {
        "label": "Illusion",
        "value": "illusion",
      },
      Object {
        "label": "Necromancy",
        "value": "necromancy",
      },
      Object {
        "label": "Transmutation",
        "value": "transmutation",
      },
    ]
  }
>
  <FormField
    colWidth={null}
    inputId={null}
    label={null}
    namespace="spell"
    prop="school"
  >
    <FormGroup
      className="form-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field"
      >
        <label
          htmlFor="spell-school-input"
        >
          School
        </label>
        <SchoolInput
          form={
            Object {
              "data": Object {
                "castingTime": "1 reaction, which you take when you speak your own name or hear it spoken",
                "description": "Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap.",
                "duration": "Instantaneous",
                "id": "e17bca01-24d3-48d3-a308-099dd6dca373",
                "level": 0,
                "materialComponent": "",
                "name": "Thunderclap",
                "range": "Self",
                "ritual": false,
                "school": "illusion",
                "shortDescription": "Create an ominous thunderclap when your name is spoken",
                "somaticComponent": false,
                "verbalComponent": false,
              },
              "namespace": "spell",
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
            }
          }
          options={
            Array [
              Object {
                "label": "Abjuration",
                "value": "abjuration",
              },
              Object {
                "label": "Conjuration",
                "value": "conjuration",
              },
              Object {
                "label": "Divination",
                "value": "divination",
              },
              Object {
                "label": "Enchantment",
                "value": "enchantment",
              },
              Object {
                "label": "Evocation",
                "value": "evocation",
              },
              Object {
                "label": "Illusion",
                "value": "illusion",
              },
              Object {
                "label": "Necromancy",
                "value": "necromancy",
              },
              Object {
                "label": "Transmutation",
                "value": "transmutation",
              },
            ]
          }
        >
          <FormSelectInput
            defaultOption={null}
            id="spell-school-input"
            onChange={[Function]}
            options={
              Array [
                Object {
                  "label": "Abjuration",
                  "value": "abjuration",
                },
                Object {
                  "label": "Conjuration",
                  "value": "conjuration",
                },
                Object {
                  "label": "Divination",
                  "value": "divination",
                },
                Object {
                  "label": "Enchantment",
                  "value": "enchantment",
                },
                Object {
                  "label": "Evocation",
                  "value": "evocation",
                },
                Object {
                  "label": "Illusion",
                  "value": "illusion",
                },
                Object {
                  "label": "Necromancy",
                  "value": "necromancy",
                },
                Object {
                  "label": "Transmutation",
                  "value": "transmutation",
                },
              ]
            }
            value="illusion"
          >
            <select
              className="custom-select"
              id="spell-school-input"
              onChange={[Function]}
              value="illusion"
            >
              <FormSelectOption
                key="option-0"
                label="Abjuration"
                value="abjuration"
              >
                <option
                  value="abjuration"
                >
                  Abjuration
                </option>
              </FormSelectOption>
              <FormSelectOption
                key="option-1"
                label="Conjuration"
                value="conjuration"
              >
                <option
                  value="conjuration"
                >
                  Conjuration
                </option>
              </FormSelectOption>
              <FormSelectOption
                key="option-2"
                label="Divination"
                value="divination"
              >
                <option
                  value="divination"
                >
                  Divination
                </option>
              </FormSelectOption>
              <FormSelectOption
                key="option-3"
                label="Enchantment"
                value="enchantment"
              >
                <option
                  value="enchantment"
                >
                  Enchantment
                </option>
              </FormSelectOption>
              <FormSelectOption
                key="option-4"
                label="Evocation"
                value="evocation"
              >
                <option
                  value="evocation"
                >
                  Evocation
                </option>
              </FormSelectOption>
              <FormSelectOption
                key="option-5"
                label="Illusion"
                value="illusion"
              >
                <option
                  value="illusion"
                >
                  Illusion
                </option>
              </FormSelectOption>
              <FormSelectOption
                key="option-6"
                label="Necromancy"
                value="necromancy"
              >
                <option
                  value="necromancy"
                >
                  Necromancy
                </option>
              </FormSelectOption>
              <FormSelectOption
                key="option-7"
                label="Transmutation"
                value="transmutation"
              >
                <option
                  value="transmutation"
                >
                  Transmutation
                </option>
              </FormSelectOption>
            </select>
          </FormSelectInput>
        </SchoolInput>
      </div>
    </FormGroup>
  </FormField>
</SchoolField>
`;

exports[`<SpellForm /> fields <SubmitButton /> should match the snapshot 1`] = `
<SubmitButton
  disabled={false}
  form={
    Object {
      "data": Object {
        "castingTime": "1 reaction, which you take when you speak your own name or hear it spoken",
        "description": "Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap.",
        "duration": "Instantaneous",
        "id": "e17bca01-24d3-48d3-a308-099dd6dca373",
        "level": 0,
        "materialComponent": "",
        "name": "Thunderclap",
        "range": "Self",
        "ritual": false,
        "school": "illusion",
        "shortDescription": "Create an ominous thunderclap when your name is spoken",
        "somaticComponent": false,
        "verbalComponent": false,
      },
      "namespace": "spell",
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
    }
  }
  requestStatus="initialized"
>
  <FormGroup
    className=""
    colWidth={null}
  >
    <div
      className="form-group col"
    >
      <SpellFormSubmitButton
        disabled={false}
        form={
          Object {
            "data": Object {
              "castingTime": "1 reaction, which you take when you speak your own name or hear it spoken",
              "description": "Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap.",
              "duration": "Instantaneous",
              "id": "e17bca01-24d3-48d3-a308-099dd6dca373",
              "level": 0,
              "materialComponent": "",
              "name": "Thunderclap",
              "range": "Self",
              "ritual": false,
              "school": "illusion",
              "shortDescription": "Create an ominous thunderclap when your name is spoken",
              "somaticComponent": false,
              "verbalComponent": false,
            },
            "namespace": "spell",
            "onChangeAction": [MockFunction],
            "onSubmitAction": [MockFunction],
          }
        }
        isUpdate={false}
        requestStatus="initialized"
      >
        <FormSubmitWrapper
          block={true}
          disabled={false}
          form={
            Object {
              "data": Object {
                "castingTime": "1 reaction, which you take when you speak your own name or hear it spoken",
                "description": "Immediately after speaking or hearing your name, you create the illusory sound of an ominous, distant thunderclap.",
                "duration": "Instantaneous",
                "id": "e17bca01-24d3-48d3-a308-099dd6dca373",
                "level": 0,
                "materialComponent": "",
                "name": "Thunderclap",
                "range": "Self",
                "ritual": false,
                "school": "illusion",
                "shortDescription": "Create an ominous thunderclap when your name is spoken",
                "somaticComponent": false,
                "verbalComponent": false,
              },
              "namespace": "spell",
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
            }
          }
          outline={true}
        >
          <Button
            block={true}
            buttonStyle="primary"
            className={null}
            disabled={false}
            onClick={[Function]}
            outline={true}
          >
            <button
              className="btn btn-outline-primary btn-block"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Create Spell
            </button>
          </Button>
        </FormSubmitWrapper>
      </SpellFormSubmitButton>
    </div>
  </FormGroup>
</SubmitButton>
`;
